fix(Tabs): fix tabs text alignment on ios

--- a/app/client/stylesheets/touchstone-overwrites/Tabs-Navigator.scss
+++ b/app/client/stylesheets/touchstone-overwrites/Tabs-Navigator.scss
@@ -13,6 +13,10 @@
 
         .pa-Svg {
             font-size: 16px;
+
+            .device--iOS & {
+                margin-bottom: 3px;
+            }
         }
 
         .Tabs-Label {
@@ -27,3 +31,4 @@
         }
     }
 }
+
